8283894: Extending IR framework testcase with some functional test points.